--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Daniel Hardman's Papers
-description: scholarly and technical writings on various topics
+title: Codecraft
+description: software = science + art + people
 author:
   name: "Daniel Hardman"
   twitter: "dhh1128"
